--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,9 @@
 <%- include('partials/head') -%>
 
-<div class="container">
-    <h1 class="title">Bienvenido a mi sitio web</h1>
-    <p>Esta es la página de inicio</p>
-</div>
+<section class="hero is-large is-primary">
+    <div class="hero-body">
+      <p class="title">Welcome</p>
+    </div>
+  </section>
 
 <%- include('partials/footer') -%>
