--- a/views/login.ejs
+++ b/views/login.ejs
@@ -79,6 +79,7 @@
         
                 if (!response.ok) {
                   const errorData = await response.json();
+                  console.log(errorData);
                   throw new Error(errorData.error);
                 }
         
