--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -18,6 +18,10 @@
             EXTERNAL SYSTEM
           </a>
         </div>
+
+        <a class="navbar-item" href="/labor_hours/">
+          Report Labor Hours
+        </a>
       
         <div id="navbarBasicExample" class="navbar-menu">
           <div class="navbar-start">
